# cookiecutter-docker-python-pdm

./: CODEOWNERS  Makefile  README.md  cookiecutter.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
hooks/: post_gen_project.py
tests/: test_cookiecutter.py
{{ cookiecutter.project_name }}/: Dockerfile  Dockerfile.production  Makefile  README.md  main.py  pyproject.toml  {{ '' }}.gitignore
{{ cookiecutter.project_name }}/.github/workflows/: ci.yml  release.yml  run.yml
{{ cookiecutter.project_name }}/tests/: test_functions.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/: functions.py
