[project]
name = "{{ cookiecutter.project_name }}"
version = "0.0.1"
description = ""
authors = [
    {name = "Michal Nakoneczny", email = "michal@nakoneczny.pl"},
]
dependencies = [
    "requests==2.31.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
homepage = ""

[project.optional-dependencies]
dev = [
    "black==23.7.0",
    "isort==5.12.0",
    "mypy==1.4.1",
    "pytest-cov==4.1.0",
    "pytest==7.4.0",
    "ssort==0.11.6",
    "ruff==0.0.278",
]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.mypy]
files = "{{ cookiecutter.project_name }}/**/*.py,tests/**/*.py"
exclude = "__pypackages__/"
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[tool.coverage.run]
data_file = "/tmp/.{{ cookiecutter.project_name }}.coverage"
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 92
